# ai-rag

./: README.md
ai-rag-backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
ai-rag-backend/alembic/versions/: 20260119_initial_migration_a1b2c3d4e5f6.py
ai-rag-backend/app/: main.py  models.py
ai-rag-backend/app/api/: api_router.py  deps.py
ai-rag-backend/app/api/endpoints/: rag.py
ai-rag-backend/app/core/: config.py
ai-rag-backend/app/rag/: __init__.py  pdf_service.py  rag_service.py  vector_store.py
ai-rag-backend/app/schemas/: requests.py  responses.py
ai-rag-backend/app/tests/: conftest.py  test_api_endpoints.py  test_pdf_service.py  test_rag_service.py  test_vector_store.py
ai-rag-backend/scripts/: generate_pdfs.py  ingest_pdfs.py
ai-rag-frontend/: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
ai-rag-frontend/app/: globals.css  layout.tsx  page.tsx
ai-rag-frontend/app/api/chat-rag/: route.ts
ai-rag-frontend/app/chat-rag/: page.tsx
ai-rag-frontend/components/: chat-rag.tsx  mode-switcher.tsx
ai-rag-frontend/components/ai-elements/: actions.tsx  branch.tsx  code-block.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  response.tsx  source.tsx  suggestion.tsx  task.tsx  tool.tsx  web-preview.tsx
ai-rag-frontend/components/ui/: avatar.tsx  carousel.tsx  hover-card.tsx  scroll-area.tsx  select.tsx  tooltip.tsx
